# quantum-energy-mobile

./: Cargo.toml  HYBRID_QUANTUM_PHOTONIC_KERNEL.md  IMPLEMENTATION_SUMMARY.md  README.md  index.html  install.bat  install.sh  package.json  tauri.conf.json  vite.config.ts
quantum-energy-mobile/: LICENSE
src/: index.css
src-tauri/src/: database.rs  main.rs
